  * [Christian] Moved <name> theme in gforge-theme-<name> dir where name not 
    gforge or osx
  * [Roland] Fixed cvs_dump_update.pl so that it creates the homedirs for
    the anoncvs_* users when needed.
  * [Roland] Also fixed database user creation code.
  * [Roland] Depend on cronolog (>= 1.6.2-1), since the binary was
    relocated from /usr/sbin to /usr/bin in that version.

 -- Roland Mas <lolando@debian.org>  Sun, 18 May 2003 21:29:16 +0200

gforge (3rc2-1) unstable; urgency=low

  * [Christian] rc2 will go to unstable

 -- Christian Bayle <bayle@debian.org>  Wed, 14 May 2003 00:15:36 +0200

gforge (3rc1-3) experimental; urgency=low

  * [Christian] Fixed GForge-CVS in cvsweb.conf
  * [Christian] Fixed jpgraph path in local.inc
  * [Christian] Added suggest on libphp-jpgraph
  * [Christian] Added unix_box and cvs_box argument to the
    create funtion in Group.class
  * [Christian] added darkaqua theme from Patrick McFarland (diablod3)
  * [Chrsitian] added a find for sourceforge owned file in common postinst 
    (Closes: bug#179050)
  * [Roland] Fixed homedirs for anoncvs_* users.
  * [Roland] Enabled HTTPS for CVSweb.
  * [Roland] Removed yet a few mentions of Sourceforge.
  * [Roland] Fixed a few problems with OpenLDAP 2.1.

 -- Roland Mas <lolando@debian.org>  Sat, 26 Apr 2003 22:22:39 +0200

gforge (3rc1-2) experimental; urgency=low

  * [Roland] Corrected a bug in exim install script
  * [Christian] Added location on projects and users for ssl part
  * [Christian] Fixed a typo in deb-specific/install-postfix.sh

 -- Christian Bayle <bayle@debian.org>  Wed, 26 Mar 2003 23:29:15 +0100

gforge (3rc1-1) experimental; urgency=low

  * [Christian] Added support for content encoding in util_send_mail
  * [Christian] Removed .htaccess and put appropriate lines in httpd template
  * [Christian] Renamed sf-(un)register functions in (un)register
  * [Christian] Some cvs improvement
  * [Roland] Fixed several database upgrading bugs.